# request-evaluator

./: .gitignore  README.md  metadata.yaml  pyproject.toml
output/pack/: metadata.yaml
scripts/: pack.py  start.py  update.py
src/Evaluator/TA/request_evaluator/: __init__.py  metadata.json  request_evaluator.py
src/Evaluator/TA/request_evaluator/config/: RequestEvaluator.json
src/Evaluator/TA/request_evaluator/resources/: RequestEvaluator.md
tests/: test_evaluator.py
